# HIShell

./: .gitignore  AI_TRANSCRIPT_APPENDIX.md  J_AJ_141_23_table2.dat.txt  J_AJ_141_23_table7.dat.txt  README.md  environment.yml  pyproject.toml  requirements.txt
artifacts/: model_metadata.json
hishells-pv/: .gitattributes  .gitignore  README.md  analysis.ipynb  environment.yml  pyproject.toml
hishells-pv-research/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
hishells-pv/configs/: pv_config_NGC2403.yaml  pv_config_NGC3031.yaml  pv_config_NGC628.yaml  pv_preview_NGC3184._resolved.yaml  pv_preview_NGC3184.yaml  pv_preview_NGC628._resolved.yaml  pv_preview_NGC628.yaml
hishells-pv/data/: README.md
hishells-pv/hishells_pv/: __init__.py  cli.py
hishells-pv/hishells_pv/data/: dataset.py
hishells-pv/hishells_pv/datagen/: emit_agg.py  generate_all.py  prepare_combined.py  prepare_standardized.py  validate.py
hishells-pv/hishells_pv/infer/: aggregate.py  aggregate_galaxies.py  calibrate.py  postprocess.py  predict.py
hishells-pv/hishells_pv/models/: losses.py  metrics.py  unet.py
hishells-pv/hishells_pv/pv/: label_pv.py  make_pv.py  standardized_cuts.py
hishells-pv/hishells_pv/train/: trainer.py
hishells-pv/hishells_pv/utils/: config.py  wcs_tools.py
hishells-pv/runs/: README.md
hishells-pv/scripts/: aggregate_stress.py  check_no_large_data.sh  install_git_hooks.sh  plot_run_metrics.py  regen_regions.py  run_aggregate_test.py
hishells-pv/tests/: conftest.py  test_aggregate.py  test_catalog.py  test_config.py  test_dataset.py  test_losses.py  test_synthetic_pipeline.py  test_unet.py
hishells-pv/training_data/: README.md
hishells_pv/: __init__.py
notebooks/: shell_type_selection_effects.ipynb
presentation_visuals/: VISUALIZATION_NOTES.md  generate_presentation_visuals.py
scripts/: aggregate-all  build_shell_review_catalog.py  calibrate  generate  generate_all_training_pv.py  generate_standardized_pv_cuts.py  infer  infer.sh  install_hooks.sh  mine_hard_negatives.py  (+8 more)
(+6332 files in other folders)
