[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hishells-pv"
version = "0.1.0"
description = "Standardized position-velocity cut pipeline for high-recall HI shell detection."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "HIShells project"}]
dependencies = [
    "astropy",
    "jsonschema",
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml",
    "radio-beam",
    "reproject",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "spectral-cube",
    "statsmodels",
    "tensorflow>=2.14",
    "torch",
    "torchvision",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-xdist"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hishells_pv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::astropy.io.fits.verify.VerifyWarning",
]
