[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hishells-pv"
version = "0.1.0"
description = "PV-slice HI shell detection and review pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "HIShells project"}]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "pyyaml",
    "tqdm",
    "astropy",
    "radio-beam",
    "scikit-image",
    "jsonschema",
    "torch",
]

[project.optional-dependencies]
analysis = ["statsmodels", "scikit-learn"]
dev = ["pytest", "pytest-xdist", "ipython", "jupyter"]

[project.scripts]
hishells-pv = "hishells_pv.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hishells_pv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::astropy.io.fits.verify.VerifyWarning",
]
